src/objects/Kalkulacia__c.object
<CustomObject>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Kalkulácie</relationshipLabel>
        <relationshipName>Kalkulacie</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cena__c</fullName>
        <label>Cena</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Stav__c</fullName>
        <label>Stav</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Naceniť</fullName>
                </value>
                <value>
                    <fullName>Nacenené</fullName>
                </value>
                <value>
                    <fullName>Neschválené</fullName>
                </value>
                <value>
                    <fullName>Schválené</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Kalkulácia</label>
    <nameField>
        <label>Názov kalkulácie</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Kalkulácie</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>